--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+
     <color name="primary_50">#E8F1FD</color>
     <color name="primary_100">#B6D3FA</color>
     <color name="primary_200">#93BDF8</color>
