--- a/app/src/main/res/drawable/suppliers_icon.xml
+++ b/app/src/main/res/drawable/suppliers_icon.xml
@@ -1,12 +1,41 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="24dp"
-    android:viewportHeight="20"
-    android:viewportWidth="20"
+    android:viewportHeight="14"
+    android:viewportWidth="14"
     android:width="24dp">
-
-    <path
-        android:fillColor="#000000"
-        android:pathData="M10,0C4.486,0 0,4.486 0,10C0,12.465 0.898,14.723 2.383,16.468C2.402,16.498 2.424,16.525 2.449,16.551C2.455,16.557 2.461,16.56 2.467,16.566C4.302,18.668 6.997,20 10,20C13.003,20 15.698,18.668 17.533,16.566C17.539,16.56 17.545,16.556 17.551,16.551C17.576,16.525 17.598,16.497 17.617,16.468C19.102,14.723 20,12.465 20,10C20,4.486 15.514,0 10,0H10ZM10,19C7.444,19 5.136,17.928 3.496,16.211L4.181,15.526C4.843,14.865 5.722,14.5 6.658,14.5H13.342C14.278,14.5 15.157,14.865 15.819,15.526L16.504,16.211C14.864,17.927 12.556,19 10,19H10ZM17.156,15.449L16.526,14.819C15.675,13.969 14.545,13.5 13.342,13.5H6.658C5.455,13.5 4.325,13.969 3.474,14.819L2.844,15.449C1.688,13.936 1,12.047 1,10C1,5.038 5.037,1 10,1C14.962,1 19,5.037 19,10C19,12.047 18.312,13.936 17.156,15.449H17.156ZM10,4.5C7.794,4.5 6,6.295 6,8.5C6,10.706 7.794,12.5 10,12.5C12.205,12.5 14,10.706 14,8.5C14,6.295 12.205,4.5 10,4.5ZM10,11.5C8.346,11.5 7,10.155 7,8.5C7,6.846 8.346,5.5 10,5.5C11.654,5.5 13,6.846 13,8.5C13,10.155 11.654,11.5 10,11.5Z"
-        android:strokeWidth="4" />
-
+  <path
+      android:strokeWidth="1"
+      android:pathData="M8.5,5.5H11.5C12.03,5.5 12.539,5.711 12.914,6.086C13.289,6.461 13.5,6.97 13.5,7.5V11.5H12"
+      android:strokeLineJoin="round"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:strokeLineCap="round"/>
+  <path
+      android:strokeWidth="1"
+      android:pathData="M1.5,11.5H0.5V4.5C0.5,4.235 0.605,3.98 0.793,3.793C0.98,3.605 1.235,3.5 1.5,3.5H7.5C7.765,3.5 8.02,3.605 8.207,3.793C8.395,3.98 8.5,4.235 8.5,4.5V11.5"
+      android:strokeLineJoin="round"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:strokeLineCap="round"/>
+  <path
+      android:strokeWidth="1"
+      android:pathData="M8,11.5H5.5"
+      android:strokeLineJoin="round"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:strokeLineCap="round"/>
+  <path
+      android:strokeWidth="1"
+      android:pathData="M10.25,13.5C9.283,13.5 8.5,12.717 8.5,11.75C8.5,10.783 9.283,10 10.25,10C11.217,10 12,10.783 12,11.75C12,12.717 11.217,13.5 10.25,13.5Z"
+      android:strokeLineJoin="round"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:strokeLineCap="round"/>
+  <path
+      android:strokeWidth="1"
+      android:pathData="M3.5,13.5C2.533,13.5 1.75,12.717 1.75,11.75C1.75,10.783 2.533,10 3.5,10C4.466,10 5.25,10.783 5.25,11.75C5.25,12.717 4.466,13.5 3.5,13.5Z"
+      android:strokeLineJoin="round"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:strokeLineCap="round"/>
 </vector>
